other/limit-configmap-for-sa/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: limit-configmap-for-sa
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../limit-configmap-for-sa.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
    - apply:
        file: chainsaw-step-02-apply-5.yaml
    - apply:
        file: chainsaw-step-02-apply-6.yaml
  - name: step-03
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu

          # Setting up the SA user
          export TOKEN_SA=`kubectl get secret another-secret -n another-namespace -ojsonpath='{.data.token}' | base64 -d`
          kubectl config set-credentials another-user --token=${TOKEN_SA}
          kubectl config set-context another-context --user=another-user --cluster=kind-kind --namespace=another-namespace

          # Applying Manifests
          if kubectl create --context=another-context -f cm-bad.yaml; then exit 1; else echo "success: bad cm failed to create by sa"; fi
          if kubectl create -f cm-bad.yaml; then exit 1; else echo "success: bad cm failed to create by cluster-admin"; fi
          kubectl create --context=another-context -f cm-good.yaml

          # Unset the context and user
          kubectl config unset contexts.another-context
          kubectl config unset users.another-user
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: limit-configmap-for-sa
